# oekostrom-integration

./: SECURITY_REVIEW.md  pyproject.toml
.github/workflows/: lint.yml
custom_components/oekostrom/: api.py  config_flow.py  const.py  coordinator.py  sensor.py  strings.json
custom_components/oekostrom/translations/: de.json
